# ntcl-util

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.info
src/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/modules/api/: CMakeLists.txt  util_api.f90
src/modules/assert/: CMakeLists.txt  assert.f90
src/modules/commandline/: CMakeLists.txt  cmdline_arguments.f90  cmdline_interface.f90  cmdline_parser.f90  selector.f90
src/modules/configuration/: CMakeLists.txt  application_config.f90  config_file_parser.f90  makefile.mk
src/modules/dictionary/: CMakeLists.txt  dictionary.f90  dictionary_ccompat.f90  dictionary_converter.f90
src/modules/domain/: CMakeLists.txt  domain.f90  slice.f90  tile.f90
src/modules/domain_builder/: CMakeLists.txt  balanced_slicer.f90  slicer.f90
src/modules/interoptability/: CMakeLists.txt  fortran_c_intrinsics.f90  pointer_interface.c
src/modules/iterator/: CMakeLists.txt  integer_range.f90  iterator.f90  iterator_limit.f90
src/modules/iterator_builder/: CMakeLists.txt  iterator_constraint.f90  iterator_constraint_wrapper.f90  iterator_product.f90
src/modules/iterator_constraints/: CMakeLists.txt  pleq_constraint.f90  plq_constraint.f90  pneq_constraint.f90
src/modules/measurement/: CMakeLists.txt  measurement.f90  measurement_writer.f90
src/modules/property/: CMakeLists.txt  property.f90  property_collection.f90  property_with_name.f90
src/modules/quantum_number/: CMakeLists.txt  quantum_number.f90  quantum_number_collection.f90  quantum_number_descriptor.f90  quantum_number_lookup.f90
src/modules/readers/: CMakeLists.txt  integer_column_data_reader.f90
src/modules/string/: CMakeLists.txt  priority_helper.f90  short_string_ccompat.f90  string.f90  string_array_helper.f90  string_converter.f90
src/modules/timer/: CMakeLists.txt  timer.f90
src/test/: CMakeLists.txt
src/test/api/: CMakeLists.txt  api_package_test.f90
src/test/assert/: CMakeLists.txt  assert_package_test.f90
src/test/commandline/: CMakeLists.txt  cmdline_parser_test.f90  commandline_package_test.f90  test.info
src/test/configuration/: CMakeLists.txt  configuration_package_test.f90
src/test/dictionary/: CMakeLists.txt  dictionary_package_test.f90
src/test/domain/: CMakeLists.txt  domain_package_test.f90
src/test/domain_builder/: CMakeLists.txt  domain_builder_package_test.f90
src/test/interoptability/: CMakeLists.txt  interoptability_package_test.f90
src/test/iterator/: CMakeLists.txt  integer_range_test.f90  iterator_package_test.f90  iterator_test.f90  test.info
src/test/iterator_builder/: CMakeLists.txt  iterator_builder_package_test.f90  iterator_product_test.f90  makefile.mk  test.info
src/test/iterator_constraints/: CMakeLists.txt  iterator_constraints_package_test.f90
src/test/measurement/: CMakeLists.txt  measurement_package_test.f90
src/test/property/: CMakeLists.txt  property_package_test.f90
src/test/quantum_number/: CMakeLists.txt  quantum_number_package_test.f90
src/test/readers/: CMakeLists.txt  integer_column_data_reader_test.f90  readers_package_test.f90  test.info
src/test/string/: CMakeLists.txt  string_package_test.f90  string_test.f90  test.info
src/test/timer/: CMakeLists.txt  timer_package_test.f90
src/test/unittest/: CMakeLists.txt  makefile.mk  unittest.f90
