add_subdirectory(api)
add_subdirectory(assert)
add_subdirectory(commandline)
add_subdirectory(configuration)
add_subdirectory(dictionary)
add_subdirectory(domain)
add_subdirectory(domain_builder)
add_subdirectory(interoptability)
add_subdirectory(iterator)
add_subdirectory(iterator_builder)
add_subdirectory(iterator_constraints)
add_subdirectory(measurement)
add_subdirectory(property)
add_subdirectory(quantum_number)
add_subdirectory(readers)
add_subdirectory(string)
add_subdirectory(timer)
add_subdirectory(unittest)
